First stab at simple website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,76 @@
-Hello world again
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta name="description" content="free radical network">
+<meta name="keywords" content="sustainability, silicon, technology">
+<title>free radical network</title>
+<style type="text/css">
+<!--
 
-Free radical is live
+body
+{
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
+.header {
+	font-size: xx-large;
+}
+
+.footer {
+	font-size: small;
+}
+
+.bodytext {
+	font-size: medium;
+}
+
+.boxlink {
+	font-size: large;
+	background-color: #333;
+	border: 3px solid rgb(255, 187, 0);
+	padding: 0.5em;
+	margin: 1em;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+
+.products {
+	margin: 1em;
+}
+
+.products a:link {color:white; text-decoration: none; }
+.products a:visited {color:white; text-decoration: none; }
+.products a:hover {color:black ; text-decoration: none; background-color:#FFF; border:3px solid white;}
+
+-->
+</style>
+</head>
+
+<body>
+
+<div align="center" class="header">
+  <p>free radical network</p>
+</div>
+<div align="center" class="bodytext">
+	<p>looking to bond with other free radicals to work on sustainability</p>
+	<div class="products">
+	<br>
+	<p>
+		<a class="boxlink" href="https://freeradicalnetwork.substack.com/">substack writing</a>
+	</p>
+	<br>
+	</div>
+</div>
+
+<div align="center" class="footer">
+	<p>copyright 2023 - mats myrberg</p>
+</div>
+
+
+</body>
+</html>
+
+
+
