Tweak look a bit

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ body
 }
 
 .bodytext {
-	font-size: medium;
+	font-size: large;
 }
 
 .boxlink {
 	font-size: large;
-	background-color: #333;
-	border: 3px solid rgb(255, 187, 0);
+	background-color: #33333376;
+	border: 3px solid rgb(20, 17, 10);
 	padding: 0.5em;
 	margin: 1em;
     -webkit-border-radius: 3px;
@@ -42,7 +42,7 @@ body
 
 .products a:link {color:white; text-decoration: none; }
 .products a:visited {color:white; text-decoration: none; }
-.products a:hover {color:black ; text-decoration: none; background-color:#FFF; border:3px solid white;}
+.products a:hover {color:black ; text-decoration: underline; background-color:#FFF; border:3px solid white;}
 
 -->
 </style>
