Added linked in link

--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@ body
   <p>free radical network</p>
 </div>
 <div align="center" class="bodytext">
-	<p>looking to bond with other free radicals to work on sustainability</p>
+	<p>looking to bond to work on sustainability</p>
 	<div class="products">
 	<br>
 	<p>
 		<a class="boxlink" href="https://freeradicalnetwork.substack.com/">substack writing</a>
+	</p>
+    <br>
+    <p>
+		<a class="boxlink" href="https://www.linkedin.com/in/matsmyrberg//">cv</a>
 	</p>
 	<br>
 	</div>
