--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body
   <p>free radical network</p>
 </div>
 <div align="center" class="bodytext">
-	<p>looking to bond to work on sustainability</p>
+	<p>looking to bond with others to work on sustainability</p>
 	<div class="products">
 	<br>
 	<p>
@@ -62,7 +62,7 @@ body
 	</p>
     <br>
     <p>
-		<a class="boxlink" href="https://www.linkedin.com/in/matsmyrberg//">cv</a>
+		<a class="boxlink" href="https://www.linkedin.com/in/matsmyrberg//">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspcv&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
 	</p>
 	<br>
 	</div>
