Substack and linkedin badges instead of links.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 <meta name="description" content="free radical network">
 <meta name="keywords" content="sustainability, silicon, technology">
 <title>free radical network</title>
+
 <style type="text/css">
 <!--
 
 body
 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	min-height: 100vh;
+  	display: flex;
+  	flex-direction: column;
 }
 
 .header {
@@ -20,6 +24,8 @@ body
 
 .footer {
 	font-size: small;
+	margin-top: auto;
+	text-align: center;
 }
 
 .bodytext {
@@ -46,32 +52,39 @@ body
 
 -->
 </style>
+
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
 </head>
 
 <body>
 
-<div align="center" class="header">
-  <p>free radical network</p>
-</div>
-<div align="center" class="bodytext">
-	<p>looking to bond with others to work on sustainability</p>
-	<div class="products">
-	<br>
-	<p>
-		<a class="boxlink" href="https://freeradicalnetwork.substack.com/">substack writing</a>
-	</p>
-    <br>
-    <p>
-		<a class="boxlink" href="https://www.linkedin.com/in/matsmyrberg//">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspcv&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
-	</p>
-	<br>
+<main>
+	
+	<div align="center">
+		<h1><br>free radical network</h1>
 	</div>
-</div>
 
-<div align="center" class="footer">
-	<p>copyright 2023 - mats myrberg</p>
-</div>
+	<div align="center" class="bodytext">
+		<p>looking to bond with others to work on sustainability</p>
+	</div>
 
+	<div align="center">
+		<br>
+
+		<iframe src="https://freeradicalnetwork.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
+		<br>	
+		<br>
+
+		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg?trk=profile-badge"></a></div>
+
+	</div>
+
+</main>
+
+
+<div class="footer"><p>copyright 2023 - mats myrberg</p></div>
 
 </body>
 </html>
