--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@ body
 	<div align="center">
 		<br>
 
-		<iframe src="https://freeradicalnetwork.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
-
+		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg?trk=profile-badge"></a></div>
+		
+	
 		<br>	
 		<br>
 
-		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg?trk=profile-badge"></a></div>
+		<div>
+			<iframe src="https://freeradicalnetwork.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>	
+		</div>
 
 	</div>
 
