--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@ body
 	<div align="center">
 		<br>
 
-		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg?trk=profile-badge"></a></div>
-		
-	
+		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg"></a></div>
+              
 		<br>
-		hello world
+		
 		<br>
 
 		<div>
