--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@ body
 	<div align="center">
 		<br>
 
-		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg"></a></div>
-              
-		<br>
-		
-		<br>
-
+		<!-- 
+			<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="matsmyrberg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/matsmyrberg"></a></div> */
+		-->   
 		<div>
 			<iframe src="https://freeradicalnetwork.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>	
 		</div>
+
+		<br>
+		<br>
 
 	</div>
 
 </main>
 
 
-<div class="footer"><p>copyright 2023 - mats myrberg</p></div>
+<div class="footer"><p>copyright 2023 - <a href="https://www.linkedin.com/in/matsmyrberg//">mats myrberg</a></div>
 
 </body>
 </html>
